--- a/draw.html
+++ b/draw.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Drawing Demo</title>
 <style>
 body { background-color: #000; }
