--- a/draw.html
+++ b/draw.html
@@ -3,7 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Drawing Demo</title>
 <style>
-body { background-color: #000; }
+body {
+  background-color: #000;
+  overflow: hidden;
+}
 #committed { background-color: #fff; }
 #committed, #overlay {
   position: absolute;
